--- a/_jades/video.jade
+++ b/_jades/video.jade
@@ -1,192 +1,188 @@
-.video-container
-  .videoframe
-    video#my-player.video-js(controls='', preload='auto', poster='//vjs.zencdn.net/v/oceans.png', data-setup='{}')
-        source(src='rtmp://209.58.177.152:1935/bigjtv/bigjtv', type: 'rtmp/mp4/')
-        source(src='//vjs.zencdn.net/v/oceans.webm', type='video/webm')
-        source(src='//vjs.zencdn.net/v/oceans.ogv', type='video/ogg')
-        p.vjs-no-js
-          | To view this video please enable JavaScript, and consider upgrading to a
-          | web browser that
-          a(href='http://videojs.com/html5-video-support/', target='_blank')
-            | supports HTML5 video
-section.widget-video.one_one
-.video-embed-container.fit-embed-vid-yes
-  // template
-  .ms-staff-carousel
-    // masterslider
-    #masterslider.master-slider
-      .ms-slide
-        img(src='assets/css/master/blank.gif', data-src='assets/img/pass/1.jpg', alt='lorem ipsum dolor sit')
-        .ms-info
-          h3 Pastor Anil kanth
-          h4 Anil Kanth Ministry Mombai
-          p.email
-            | E-Mail:
-            a(href='#') Bigjtv@gmail.com
-          p
-            | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
-          ul.ms-socials
-            li.ms-ico-fb
-              a(href='#') facebook
-            li.ms-ico-tw
-              a(href='#') twitter
-            li.ms-ico-gp
-              a(href='#') google+
-            li.ms-ico-yt
-              a(href='#') youtube
-      .ms-slide
-        img(src='assets/css/master/blank.gif', data-src='assets/img/pass/2.jpg', alt='lorem ipsum dolor sit')
-        .ms-info
-          h3 Br. Anu Jacob
-          h4 LoCo ministries International
-          p.email
-            | E-Mail:
-            a(href='#') Bigjtv@gmail.com
-          p
-            | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
-          ul.ms-socials
-            li.ms-ico-fb
-              a(href='#') facebook
-            li.ms-ico-tw
-              a(href='#') twitter
-            li.ms-ico-gp
-              a(href='#') google+
-            li.ms-ico-yt
-              a(href='#') youtube
-      .ms-slide
-        img(src='assets/css/master/blank.gif', data-src='assets/img/pass/3.jpg', alt='lorem ipsum dolor sit')
-        .ms-info
-          h3 Pastor Guillermo Maldonado
-          h4 King Jesus International Ministry MIAMI
-          p.email
-            | E-Mail:
-            a(href='#') Bigjtv@gmail.com
-          p
-            | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
-          ul.ms-socials
-            li.ms-ico-fb
-              a(href='#') facebook
-            li.ms-ico-tw
-              a(href='#') twitter
-            li.ms-ico-gp
-              a(href='#') google+
-            li.ms-ico-yt
-              a(href='#') youtube
-      .ms-slide
-        img(src='assets/css/master/blank.gif', data-src='assets/img/pass/4.jpg', alt='lorem ipsum dolor sit')
-        .ms-info
-          h3 Bishop Sampath Kumar
-          h4 Bishop Bangalore
-          p.email
-            | E-Mail:
-            a(href='#') Bigjtv@gmail.com
-          p
-            | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
-          ul.ms-socials
-            li.ms-ico-fb
-              a(href='#') facebook
-            li.ms-ico-tw
-              a(href='#') twitter
-            li.ms-ico-gp
-              a(href='#') google+
-            li.ms-ico-yt
-              a(href='#') youtube
-      .ms-slide
-        img(src='assets/css/master/blank.gif', data-src='assets/img/pass/5.jpg', alt='lorem ipsum dolor sit')
-        .ms-info
-          h3 Pastor Chris Oyakhilome
-          h4 Christ Embassy Christian ministry Lagos
-          p.email
-            | E-Mail:
-            a(href='#') Bigjtv@gmail.com
-          p
-            | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
-          ul.ms-socials
-            li.ms-ico-fb
-              a(href='#') facebook
-            li.ms-ico-tw
-              a(href='#') twitter
-            li.ms-ico-gp
-              a(href='#') google+
-            li.ms-ico-yt
-              a(href='#') youtube
-      .ms-slide
-        img(src='assets/css/master/blank.gif', data-src='assets/img/pass/6.jpg', alt='lorem ipsum dolor sit')
-        .ms-info
-          h3 Pastor Dill kumar
-          h4 Dill Ministry International Dubai
-          p.email
-            | E-Mail:
-            a(href='#') bigjtv@gmail.com
-          p
-            | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
-          ul.ms-socials
-            li.ms-ico-fb
-              a(href='#') facebook
-            li.ms-ico-tw
-              a(href='#') twitter
-            li.ms-ico-gp
-              a(href='#') google+
-            li.ms-ico-yt
-              a(href='#') youtube
-      .ms-slide
-        img(src='assets/css/master/blank.gif', data-src='assets/img/pass/7.jpg',, alt='lorem ipsum dolor sit')
-        .ms-info
-          h3 Rev. Dr Ravi Mani
-          h4 Victory International AG Worship Centre Bangalore
-          p.email
-            | E-Mail:
-            a(href='#') bigjtv@gmail.com
-          p
-            | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
-          ul.ms-socials
-            li.ms-ico-fb
-              a(href='#') facebook
-            li.ms-ico-tw
-              a(href='#') twitter
-            li.ms-ico-gp
-              a(href='#') google+
-            li.ms-ico-yt
-              a(href='#') youtube
-      .ms-slide
-        img(src='assets/css/master/blank.gif', data-src='assets/img/pass/8.jpg', alt='lorem ipsum dolor sit')
-        .ms-info
-          h3 Ps.Ezekiah Francis
-          h4 Berachah Prophetic Ministries
-          p.email
-            | E-Mail:
-            a(href='#') Bigjtv@gmail.com
-          p
-            | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
-          ul.ms-socials
-            li.ms-ico-fb
-              a(href='#') facebook
-            li.ms-ico-tw
-              a(href='#') twitter
-            li.ms-ico-gp
-              a(href='#') google+
-            li.ms-ico-yt
-              a(href='#') youtube
-      .ms-slide
-        img(src='assets/css/master/blank.gif', data-src='assets/img/pass/9.jpg', alt='lorem ipsum dolor sit')
-        .ms-info
-          h3 Ps.Roshan Lobo
-          h4 Word of Victory Belle
+video#preview-player.video-js.vjs-fluid(controls='', preload='auto', crossorigin='anonymous')
+  source(src='//209.58.177.152:1935/bigjtv/bigjtv', type: 'rtmp/mp4/')
+  source(src='//vjs.zencdn.net/v/oceans.webm', type='video/webm')
+  source(src='//vjs.zencdn.net/v/oceans.ogv', type='video/ogg')
+  p.vjs-no-js
+    | To view this video please enable JavaScript, and consider upgrading to a web browser that
+    a(href='http://videojs.com/html5-video-support/', target='_blank') supports HTML5 video
+.playlist-container.preview-player-dimensions.vjs-fluid
+  ol.vjs-playlist
+// template
+.ms-staff-carousel
+  // masterslider
+  #masterslider.master-slider
+    .ms-slide
+      img(src='assets/css/master/blank.gif', data-src='assets/img/pass/1.jpg', alt='lorem ipsum dolor sit')
+      .ms-info
+        h3 Pastor Anil kanth
+        h4 Anil Kanth Ministry Mombai
+        p.email
+          | E-Mail:
+          a(href='#') Bigjtv@gmail.com
+        p
+          | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
+        ul.ms-socials
+          li.ms-ico-fb
+            a(href='#') facebook
+          li.ms-ico-tw
+            a(href='#') twitter
+          li.ms-ico-gp
+            a(href='#') google+
+          li.ms-ico-yt
+            a(href='#') youtube
+    .ms-slide
+      img(src='assets/css/master/blank.gif', data-src='assets/img/pass/2.jpg', alt='lorem ipsum dolor sit')
+      .ms-info
+        h3 Br. Anu Jacob
+        h4 LoCo ministries International
+        p.email
+          | E-Mail:
+          a(href='#') Bigjtv@gmail.com
+        p
+          | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
+        ul.ms-socials
+          li.ms-ico-fb
+            a(href='#') facebook
+          li.ms-ico-tw
+            a(href='#') twitter
+          li.ms-ico-gp
+            a(href='#') google+
+          li.ms-ico-yt
+            a(href='#') youtube
+    .ms-slide
+      img(src='assets/css/master/blank.gif', data-src='assets/img/pass/3.jpg', alt='lorem ipsum dolor sit')
+      .ms-info
+        h3 Pastor Guillermo Maldonado
+        h4 King Jesus International Ministry MIAMI
+        p.email
+          | E-Mail:
+          a(href='#') Bigjtv@gmail.com
+        p
+          | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
+        ul.ms-socials
+          li.ms-ico-fb
+            a(href='#') facebook
+          li.ms-ico-tw
+            a(href='#') twitter
+          li.ms-ico-gp
+            a(href='#') google+
+          li.ms-ico-yt
+            a(href='#') youtube
+    .ms-slide
+      img(src='assets/css/master/blank.gif', data-src='assets/img/pass/4.jpg', alt='lorem ipsum dolor sit')
+      .ms-info
+        h3 Bishop Sampath Kumar
+        h4 Bishop Bangalore
+        p.email
+          | E-Mail:
+          a(href='#') Bigjtv@gmail.com
+        p
+          | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
+        ul.ms-socials
+          li.ms-ico-fb
+            a(href='#') facebook
+          li.ms-ico-tw
+            a(href='#') twitter
+          li.ms-ico-gp
+            a(href='#') google+
+          li.ms-ico-yt
+            a(href='#') youtube
+    .ms-slide
+      img(src='assets/css/master/blank.gif', data-src='assets/img/pass/5.jpg', alt='lorem ipsum dolor sit')
+      .ms-info
+        h3 Pastor Chris Oyakhilome
+        h4 Christ Embassy Christian ministry Lagos
+        p.email
+          | E-Mail:
+          a(href='#') Bigjtv@gmail.com
+        p
+          | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
+        ul.ms-socials
+          li.ms-ico-fb
+            a(href='#') facebook
+          li.ms-ico-tw
+            a(href='#') twitter
+          li.ms-ico-gp
+            a(href='#') google+
+          li.ms-ico-yt
+            a(href='#') youtube
+    .ms-slide
+      img(src='assets/css/master/blank.gif', data-src='assets/img/pass/6.jpg', alt='lorem ipsum dolor sit')
+      .ms-info
+        h3 Pastor Dill kumar
+        h4 Dill Ministry International Dubai
+        p.email
+          | E-Mail:
+          a(href='#') bigjtv@gmail.com
+        p
+          | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
+        ul.ms-socials
+          li.ms-ico-fb
+            a(href='#') facebook
+          li.ms-ico-tw
+            a(href='#') twitter
+          li.ms-ico-gp
+            a(href='#') google+
+          li.ms-ico-yt
+            a(href='#') youtube
+    .ms-slide
+      img(src='assets/css/master/blank.gif', data-src='assets/img/pass/7.jpg',, alt='lorem ipsum dolor sit')
+      .ms-info
+        h3 Rev. Dr Ravi Mani
+        h4 Victory International AG Worship Centre Bangalore
+        p.email
+          | E-Mail:
+          a(href='#') bigjtv@gmail.com
+        p
+          | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
+        ul.ms-socials
+          li.ms-ico-fb
+            a(href='#') facebook
+          li.ms-ico-tw
+            a(href='#') twitter
+          li.ms-ico-gp
+            a(href='#') google+
+          li.ms-ico-yt
+            a(href='#') youtube
+    .ms-slide
+      img(src='assets/css/master/blank.gif', data-src='assets/img/pass/8.jpg', alt='lorem ipsum dolor sit')
+      .ms-info
+        h3 Ps.Ezekiah Francis
+        h4 Berachah Prophetic Ministries
+        p.email
+          | E-Mail:
+          a(href='#') Bigjtv@gmail.com
+        p
+          | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
+        ul.ms-socials
+          li.ms-ico-fb
+            a(href='#') facebook
+          li.ms-ico-tw
+            a(href='#') twitter
+          li.ms-ico-gp
+            a(href='#') google+
+          li.ms-ico-yt
+            a(href='#') youtube
+    .ms-slide
+      img(src='assets/css/master/blank.gif', data-src='assets/img/pass/9.jpg', alt='lorem ipsum dolor sit')
+      .ms-info
+        h3 Ps.Roshan Lobo
+        h4 Word of Victory Belle
 
-          p.email
-            | E-Mail:
-            a(href='#') Bigjtv@gmail.com
-          p
-            | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
-          ul.ms-socials
-            li.ms-ico-fb
-              a(href='#') facebook
-            li.ms-ico-tw
-              a(href='#') twitter
-            li.ms-ico-gp
-              a(href='#') google+
-            li.ms-ico-yt
-              a(href='#') youtube
-    // end of masterslider
-    #staff-info.ms-staff-info
-  // end of template
+        p.email
+          | E-Mail:
+          a(href='#') Bigjtv@gmail.com
+        p
+          | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt.
+        ul.ms-socials
+          li.ms-ico-fb
+            a(href='#') facebook
+          li.ms-ico-tw
+            a(href='#') twitter
+          li.ms-ico-gp
+            a(href='#') google+
+          li.ms-ico-yt
+            a(href='#') youtube
+  // end of masterslider
+  #staff-info.ms-staff-info
+// end of template
