--- a/assets/css/2-moduls/_video.sass
+++ b/assets/css/2-moduls/_video.sass
@@ -1,6 +1,35 @@
-.videoframe
-  position: relative
+.video-sections
+  display: -webkit-box
+  display: -ms-flexbox
   display: flex
-  justify-content: center
-  flex-direction: row
-  align-items: center
+  -ms-flex-wrap: wrap
+  flex-wrap: wrap
+  -webkit-box-pack: justify
+  -ms-flex-pack: justify
+  justify-content: space-between
+  padding: 30px
+  box-sizing: border-box
+.video-sections .video-js,.video-sections .playlist-container
+  position: relative
+  min-width: 300px
+  min-height: 150px
+  height: 0
+  box-sizing: border-box
+.video-sections .video-js
+  -webkit-box-flex: 3
+  -ms-flex: 3 1 70%
+  flex: 3 1 70%
+  box-sizing: border-box
+.video-sections .playlist-container
+  -webkit-box-flex: 1
+  -ms-flex: 1 1 30%
+  flex: 1 1 30%
+  box-sizing: border-box
+.video-sections .playlist-container .vjs-playlist
+  margin: 0
+  position: absolute
+  top: 0
+  bottom: 0
+  left: 0
+  right: 0
+  box-sizing: border-box
